superbitty/tests/ui/BitFieldCompatible/structs/not_one_field.stderr
error: one field is required for `#[derive(BitFieldCompatible)]`
 --> tests/ui/BitFieldCompatible/structs/not_one_field.rs:3:10
  |
3 | #[derive(BitFieldCompatible)]
  |          ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `BitFieldCompatible` (in Nightly builds, run with -Z macro-backtrace for more info)

error: one field is required for `#[derive(BitFieldCompatible)]`
 --> tests/ui/BitFieldCompatible/structs/not_one_field.rs:7:10
  |
7 | #[derive(BitFieldCompatible)]
  |          ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `BitFieldCompatible` (in Nightly builds, run with -Z macro-backtrace for more info)

error: one field is required for `#[derive(BitFieldCompatible)]`
  --> tests/ui/BitFieldCompatible/structs/not_one_field.rs:11:10
   |
11 | #[derive(BitFieldCompatible)]
   |          ^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `BitFieldCompatible` (in Nightly builds, run with -Z macro-backtrace for more info)

error: only one field is allowed for `#[derive(BitFieldCompatible)]`
  --> tests/ui/BitFieldCompatible/structs/not_one_field.rs:15:10
   |
15 | #[derive(BitFieldCompatible)]
   |          ^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `BitFieldCompatible` (in Nightly builds, run with -Z macro-backtrace for more info)

error: only one field is allowed for `#[derive(BitFieldCompatible)]`
  --> tests/ui/BitFieldCompatible/structs/not_one_field.rs:19:10
   |
19 | #[derive(BitFieldCompatible)]
   |          ^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `BitFieldCompatible` (in Nightly builds, run with -Z macro-backtrace for more info)
